[package]
name = "revive-me"
version = "1.0.0"
edition = "2021"
description = "Legacy Data Bridge — Convert .dbf, .xls, .csv to clean modern formats"
authors = ["Al Aqmar Tinwala"]

[[bin]]
name = "revive-me"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
calamine = "0.24"           # reads .xls and .xlsx
dbase = "0.5"               # reads .dbf (FoxPro / dBase)
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
xlsxwriter = "0.6"          # writes modern .xlsx output
anyhow = "1"
mime = "0.3"
bytes = "1"
sanitize-filename = "0.5"
